Multiple updates
Used the latest versions of below libs to get test errors to resolve
- TestNG
- ByteBuddy
- Spock

Fixed the JVM args required for tests to run successfully

All tests run successfully